feat: reg + verify + like history