@@ -1,5 +1,7 @@
 package com.microsoft.hsf302_project.config;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -8,7 +10,6 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.core.Authentication;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.jose.jws.MacAlgorithm;
@@ -21,34 +22,41 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-
 import javax.crypto.spec.SecretKeySpec;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
-    @Value("${jwt.secret}")
+
+    @Value("${jwt.secret:CHANGE_ME_256BIT_MIN}")
     private String secretKey;
 
     private static final String[] WHITE_LIST = {
-            "/auth/**",
+            // Auth APIs for this project
             "/users/register",
             "/users/verify-otp",
             "/users/resend-otp",
-            "/tag/**",
 
+            // Swipes (để test nhanh có thể mở)
+            "/swipes/**",
 
-            "/api/v1/products/active",
-            "/api/v1/products/{id}",
+            // Swagger/OpenAPI
+            "/swagger-ui/**",
+            "/v3/api-docs/**",
+
+            // other public endpoints (nếu cần)
             "/api/payment/vnpay-return",
             "/api/payment/create",
-            "https://freddie-forestial-tiny.ngrok-free.dev/api/payment/ipn"
+            "/api/payment/payment-return",
+            "/api/payment/callback",
+            "/tag/**",
+
+            // sample GET endpoint
+            "/products"
     };
-    
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -56,76 +64,63 @@ public class SecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {//cogig chặn quyền truy cập ai mới có được quyền dùng
-        http.csrf(AbstractHttpConfigurer::disable)
-                .authorizeHttpRequests(request -> request.requestMatchers(WHITE_LIST).permitAll()
-                        .requestMatchers("/api/payment/payment-return", "/api/payment/callback").permitAll()
-                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                        .requestMatchers(HttpMethod.GET,"products").permitAll()
-                        .requestMatchers("/ws/**", "/topic/**", "/app/**").permitAll()
-                        .requestMatchers("/api/eversign/webhook").permitAll()
-                        .requestMatchers("/ws").permitAll()
-                        .anyRequest().authenticated()   
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                .csrf(AbstractHttpConfigurer::disable)
+                .authorizeHttpRequests(req -> req
+                        .requestMatchers(WHITE_LIST).permitAll()
+                        .requestMatchers(HttpMethod.GET, "/products").permitAll()
+                        // Trong giai đoạn test, mở hết các request còn lại
+                        .anyRequest().permitAll()
                 )
-                .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.decoder(  jwtDecoder() ).jwtAuthenticationConverter(jwtAuthenticationConverter())))
-                .oauth2Login(oauth2 ->
-                        oauth2      //.defaultSuccessUrl("/oauth2/success",true)
-                                .failureUrl("/login?error")
-                                .redirectionEndpoint(redir -> redir.baseUri("/login/oauth2/code/*"))
-                                .successHandler((HttpServletRequest request, HttpServletResponse response, Authentication authentication) -> {
-                                    System.out.println("=== OAuth2 Success Handler Called ===");
-                                    System.out.println(" o trong security config Authentication: " + authentication);
-                                    response.sendRedirect("/oauth2/success");
-                                }))
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-        ;
-
-
+                // Nếu CHƯA dùng JWT, để comment phần resource server lại.
+                // Khi bắt đầu phát hành JWT cho FE thì bỏ comment khối dưới:
+                /*
+                .oauth2ResourceServer(oauth2 -> oauth2
+                        .jwt(jwt -> jwt
+                                .decoder(jwtDecoder())
+                                .jwtAuthenticationConverter(jwtAuthenticationConverter())
+                        )
+                )
+                */
+                .cors(c -> c.configurationSource(corsConfigurationSource()));
 
         return http.build();
     }
 
-    public JwtAuthenticationConverter jwtAuthenticationConverter(){
-        JwtGrantedAuthoritiesConverter jwtGrantedAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
-        jwtGrantedAuthoritiesConverter.setAuthorityPrefix("");
-        JwtAuthenticationConverter jwtAuthenticationConverter = new JwtAuthenticationConverter();
-        jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(jwtGrantedAuthoritiesConverter);
-        return jwtAuthenticationConverter;
+    // === (Chỉ dùng khi bật Resource Server JWT) ===
+    public JwtAuthenticationConverter jwtAuthenticationConverter() {
+        JwtGrantedAuthoritiesConverter conv = new JwtGrantedAuthoritiesConverter();
+        conv.setAuthorityPrefix(""); // không thêm "ROLE_"
+        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
+        converter.setJwtGrantedAuthoritiesConverter(conv);
+        return converter;
     }
 
-
-    public JwtDecoder  jwtDecoder() {
-        SecretKeySpec secretKeySpec = new SecretKeySpec(secretKey.getBytes(),"HS512");
-        return NimbusJwtDecoder.withSecretKey(secretKeySpec).macAlgorithm(MacAlgorithm.HS512).build();
+    public JwtDecoder jwtDecoder() {
+        SecretKeySpec key = new SecretKeySpec(secretKey.getBytes(), "HS512");
+        return NimbusJwtDecoder.withSecretKey(key)
+                .macAlgorithm(MacAlgorithm.HS512)
+                .build();
     }
+    // ===============================================
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource(){
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000", "http://localhost:3979","https://*.ngrok-free.dev" ));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
-        configuration.setAllowCredentials(Boolean.valueOf(true));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization","Cache-Control","Content-Type"));
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration cfg = new CorsConfiguration();
+        // Dùng patterns để cho phép wildcard domain
+        cfg.setAllowedOriginPatterns(List.of(
+                "http://localhost:5173",
+                "http://localhost:3000",
+                "http://localhost:3979",
+                "https://*.ngrok-free.dev"
+        ));
+        cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        cfg.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+        cfg.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**",configuration);
+        source.registerCorsConfiguration("/**", cfg);
         return source;
-
     }
-
-
-//    @Bean
-//    public CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.addAllowedOriginPattern("*"); // ⚠️ Cho phép tất cả domain test
-//        configuration.addAllowedMethod("*");
-//        configuration.addAllowedHeader("*");
-//        configuration.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", configuration);
-//        return source;
-//    }
-
-
-
 }
